[tool.poetry]
name = "aioetherscan"
version = "0.8.12"
description = "Etherscan API async Python wrapper"
authors = ["ape364 <ape364@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ape364/aioetherscan"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.4"
asyncio_throttle = "^1.0.1"
aiohttp-retry = "^2.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.5.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
